--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,6 +17,7 @@
         <div class="col-sm-6 mb-3">
           <div class="card">
             <div class="card-body">
+              <h5 class="card-titles"><%= post.titles %></h5>
               <p class="card-text"><%= post.content.slice(0, 10)+'...' %></p>
               <a href="/read/<%= post.slug_id %>" class="btn btn-primary"
                 >Lanjut Membaca</a
