--- a/views/pages/update_post.ejs
+++ b/views/pages/update_post.ejs
@@ -27,7 +27,7 @@
           <% posts.forEach(function(post) { %>
           <tr>
             <th scope="row"><%= post.a0 %></th>
-            <td><%= post.title %></td>
+            <td><%= post.titles %></td>
             <td><%= post.slug_id %></td>
             <td>
               <a class="btn btn-info" href="/read/<%= post.slug_id %>">View</a>
