--- a/views/pages/edit_post.ejs
+++ b/views/pages/edit_post.ejs
@@ -28,12 +28,12 @@
         <div class="form-group">
           <label for="exampleInputEmail1">content</label>
           <textarea
-            name="content"
+            name="kont"
             class="form-control"
             id="exampleFormControlTextarea1"
             rows="3"
           >
-<%= result.content %></textarea
+<%= result.kont %></textarea
           >
         </div>
 
