--- a/views/pages/read_post.ejs
+++ b/views/pages/read_post.ejs
@@ -12,8 +12,8 @@
       <% } else { %>
 
       <div class="container">
-        <h1 class="mt-5"><%= result.title %></h1>
-        <p class="lead"><%= result.content %></p>
+        <h1 class="mt-5"><%= result.titles %></h1>
+        <p class="lead"><%= result.kont %></p>
       </div>
 
       <% } %>
