--- a/views/pages/create_post.ejs
+++ b/views/pages/create_post.ejs
@@ -16,7 +16,7 @@
       <form action="/create" method="post">
         <div class="form-group">
           <label for="exampleInputEmail1">title</label>
-          <input name="titles" class="form-control" placeholder="Enter title" />
+          <input name="a2" class="form-control" placeholder="Enter title" />
         </div>
 
         <div class="form-group">
