--- a/views/pages/edit_post.ejs
+++ b/views/pages/edit_post.ejs
@@ -18,8 +18,8 @@
         <div class="form-group">
           <label for="exampleInputEmail1">title</label>
           <input
-            value="<%= result.titles %>"
-            name="titles"
+            value="<%= result.a2 %>"
+            name="a2"
             class="form-control"
             placeholder="Enter title"
           />
