--- a/views/pages/read_post.ejs
+++ b/views/pages/read_post.ejs
@@ -12,7 +12,7 @@
       <% } else { %>
 
       <div class="container">
-        <h1 class="mt-5"><%= result.titles %></h1>
+        <h1 class="mt-5"><%= result.a2 %></h1>
         <p class="lead"><%= result.kont %></p>
       </div>
 
