--- a/views/pages/create_post.ejs
+++ b/views/pages/create_post.ejs
@@ -22,7 +22,7 @@
         <div class="form-group">
           <label for="exampleInputEmail1">content</label>
           <textarea
-            name="kont"
+            name="a9"
             class="form-control"
             id="exampleFormControlTextarea1"
             rows="3"
