--- a/views/pages/read_post.ejs
+++ b/views/pages/read_post.ejs
@@ -13,7 +13,7 @@
 
       <div class="container">
         <h1 class="mt-5"><%= result.a2 %></h1>
-        <p class="lead"><%= result.kont %></p>
+        <p class="lead"><%= result.a9 %></p>
       </div>
 
       <% } %>
