--- a/views/pages/edit_post.ejs
+++ b/views/pages/edit_post.ejs
@@ -28,12 +28,12 @@
         <div class="form-group">
           <label for="exampleInputEmail1">content</label>
           <textarea
-            name="kont"
+            name="a9"
             class="form-control"
             id="exampleFormControlTextarea1"
             rows="3"
           >
-<%= result.kont %></textarea
+<%= result.a9 %></textarea
           >
         </div>
 
