--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,7 +18,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-a2"><%= post.a2 %></h5>
-              <p class="card-text"><%= post.kont.slice(0, 10)+'...' %></p>
+              <p class="card-text"><%= post.a9.slice(0, 10)+'...' %></p>
               <a href="/read/<%= post.slug_id %>" class="btn btn-primary"
                 >Lanjut Membaca</a
               >
