--- a/views/pages/edit_post.ejs
+++ b/views/pages/edit_post.ejs
@@ -14,7 +14,7 @@
       <div class="alert alert-success" role="alert"><%= messages %></div>
       <% } %>
 
-      <form action="/update/<%= result.slug_id %>" method="post">
+      <form action="/update/<%= result.a0 %>" method="post">
         <div class="form-group">
           <label for="exampleInputEmail1">title</label>
           <input
