--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
             <div class="card-body">
               <h5 class="card-a2"><%= post.a2 %></h5>
               <p class="card-text"><%= post.a9.slice(0, 10)+'...' %></p>
-              <a href="/read/<%= post.slug_id %>" class="btn btn-primary"
+              <a href="/read/<%= post.a0 %>" class="btn btn-primary"
                 >Lanjut Membaca</a
               >
             </div>
