--- a/views/pages/update_post.ejs
+++ b/views/pages/update_post.ejs
@@ -28,15 +28,13 @@
           <tr>
             <th scope="row"><%= post.a0 %></th>
             <td><%= post.a2 %></td>
-            <td><%= post.slug_id %></td>
+            <td><%= post.a0 %></td>
             <td>
-              <a class="btn btn-info" href="/read/<%= post.slug_id %>">View</a>
-              <a class="btn btn-warning" href="/update/<%= post.slug_id %>"
+              <a class="btn btn-info" href="/read/<%= post.a0 %>">View</a>
+              <a class="btn btn-warning" href="/update/<%= post.a0 %>"
                 >Update</a
               >
-              <a class="btn btn-danger" href="/delete/<%= post.slug_id %>"
-                >Delete</a
-              >
+              <a class="btn btn-danger" href="/delete/<%= post.a0 %>">Delete</a>
             </td>
             <td></td>
           </tr>
